[tool.poetry]
name = "nldata"
version = "0.2.0"
description = "NLData is a library of Natural Language Datasets."
authors = ["Davide Nunes <mail@davidenunes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
filelock = "^3.0.12"
requests = "^2.24.0"
tqdm = "^4.46.1"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
